[project]
name = "constrainedsteering"
version = "0.1.0"
description = "Experimental Python framework for solving constrained optimal vehicle steering by discretizing the problem into a tree and finding the minimum-cost path."
authors = [
    {name = "Daniel Berger"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "joblib (>=1.5.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
